app/objects/Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Course_delivered_Number__c</fullName>
        <displayFormat>DELIVERY-{0000}</displayFormat>
        <label>Course delivered Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>start_date__c  + Course__r.Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <label>Instructor</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <label>start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not delivered</fullName>
                    <default>true</default>
                    <label>Not delivered</label>
                </value>
                <value>
                    <fullName>delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Delivered Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>